# item_index

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.superpowers/brainstorm/: .last-token
.zcode/plans/: plan-sess_61a67352-14d1-41cf-988c-ecf976ba560b.md
docs/: design.md  issue.md
scripts/: gen-icons.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260710000001_init.sql  20260710000002_update_preset_icons.sql  20260711000003_add_field_icon.sql  20260711000004_add_field_label.sql  20260712000005_add_namespace.sql  20260714000006_add_date_field_to_task.sql  20260720000007_add_field_options.sql
src-tauri/resources/plugins/calendar-view/: index.js  manifest.json
src-tauri/resources/plugins/stats/: index.js  manifest.json
src-tauri/resources/presets/: schedule-management.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  refs.rs  safe_path.rs  state.rs
src-tauri/src/commands/: dashboard.rs  files.rs  groups.rs  items.rs  marketplace.rs  mod.rs  plugin.rs  presets.rs  query.rs  repo.rs  tags.rs  types.rs  workspace.rs
src-tauri/tests/: db_test.rs  query_test.rs
src/assets/: icon-names.ts  theme.css
src/components/: ActivityBar.vue  CenterList.vue  CenterPanel.vue  EmptyState.vue  FileTree.vue  FileTreeNode.vue  GroupTree.vue  GroupTreeNode.vue  IconPicker.vue  NewItemDialog.vue  PluginDetail.vue  PluginMarketplace.vue  PluginsPanel.vue  PropertiesForm.vue  RepoCard.vue  RepoCreateTile.vue  RepoDashboard.vue  RightPanel.vue  SettingsModal.vue  SettingsPanel.vue  Sidebar.vue  StatusBar.vue  Toast.vue  (+8 more)
(+35 files in other folders)
