[package]
name = "index"
version = "0.1.0"
description = "Index — a local-first object/project manager"
authors = ["you"]
edition = "2021"

[lib]
name = "index_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "migrate", "chrono", "runtime-tokio-rustls"] }
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
hex = "0.4"
open = "5"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
zip = "2.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
